fix: prevent horizontal scrolling on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -77,6 +77,10 @@ html[data-theme='dark'] {
   font-size: 2rem !important;
 }
 
+body {
+  max-width: 100vw;
+}
+
 /*noinspection CssUnresolvedCustomProperty*/
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
@@ -210,5 +214,5 @@ h6 {
 }
 
 .row .footer__col {
-  @apply mx-1;
+  @apply px-5;
 }
